# SwcDbmsQtClient

./: .gitignore  AppConfig.json  CMakeLists.txt  main.cpp  vcpkg.json  version.h.in
.claude/: settings.local.json
Resource/: resources.qrc  swcdbmsclientresources.qrc
Resource/styles/: overlay.qss
Resource/styles/qt_material_modified/: README.md  material.css.template  material.json
TestData/TestAttachmentData/: brainID_18865_X_7924.17_Y_4242.94_Z_2736.16.v3dpbd.ano  brainID_18865_X_7924.17_Y_4242.94_Z_2736.16.v3dpbd.ano.apo
TestData/TestSwcData/SwcRootPath/: 18865_X_7924.17_Y_4242.94_Z_2736.16.v3dpbd.ano.eswc_sorted.eswc
src/FileIo/: AnoIo.hpp  ApoIo.hpp  FileIoInterface.hpp  SwcIo.hpp
src/GraphModel/: DefaultNodeData.hpp  IncrementOperationModel.cpp  IncrementOperationModel.h  Registry.hpp  SnapshotModel.cpp  SnapshotModel.h
src/L-Measure/: 3D.cpp  3D.h  Elaboration.cpp  Elaboration.h  Entho.cpp  Entho.h  Entho1.cpp  Entho1.h  Func.cpp  Func.h  Limit.cpp  Limit.h  Morph.cpp  Morph.h  Neuron.cpp  Neuron.h  Parameter.cpp  Parameter.h  ParameterList.cpp  ParameterList.h  Point.cpp  Point.h  RString.cpp  RString.h  Random.cpp  Random.h  Segment.cpp  Segment.h  Vector.cpp  Vector.h  pca.cpp  pca.h  wrl.cpp  wrl.h
src/SWCFeature/: CMakeLists.txt  build.bat
src/SWCFeature/common/: CMakeLists.txt  basic_surf_objs.h  swc_io.cpp  swc_io.h  v3d_basicdatatype.h
src/SWCFeature/global_neuron_feature/: CMakeLists.txt  compute_morph.cpp  compute_morph.h  main.cpp
src/SWCFeature/pruning_swc/: CMakeLists.txt  main.cpp  pruning_swc_algo.cpp  pruning_swc_algo.h
src/SWCFeature/resample_swc/: CMakeLists.txt  main.cpp  resampling.h
src/SWCFeature/sort_neuron_swc/: CMakeLists.txt  main.cpp  sort_swc.h
src/SWCQualityControl/: CMakeLists.txt  main.cpp
src/SWCQualityControl/include/SWCDetection/: BranchingDetection.h  CrossingDetection.h  LoopDetection.h  SWCDetection.h  SpecStructsDetection.h  TipDetection.h  swc_utils.h  types.h
src/SWCQualityControl/src/: BranchingDetection.cpp  CrossingDetection.cpp  LoopDetection.cpp  SpecStructsDetection.cpp  TipDetection.cpp  swc_utils.cpp
src/framework/config/: AppConfig.cpp  AppConfig.h
src/framework/core/log/: EditorConsoleSink.h  Log.cpp  Log.h
src/framework/defination/: ImageDefination.h  TypeDef.cpp  TypeDef.h
src/framework/service/: CachedProtoData.cpp  CachedProtoData.h  RpcCall.cpp  RpcCall.h  WrappedCall.cpp  WrappedCall.h
src/framework/util/: backward.cpp  util.hpp
src/framework/util/unsortswc/: main.cpp  swcutils.h
src/framework/util/unsortswc/basic_c_fun/: basic_surf_objs.cpp  basic_surf_objs.h  c_array_struct.hpp  color_xyz.h  v3d_basicdatatype.h  v3d_message.cpp  v3d_message.h
src/framework/util/unsortswc/neuron_editing/: neuron_format_converter.cpp  neuron_format_converter.h  v_neuronswc.cpp  v_neuronswc.h
src/styles/: QtAdvancedStylesheet.cpp  QtAdvancedStylesheet.h  acss_globals.h
src/swcio/: SwcIO.h
src/ui/: About.cpp  About.h  About.ui  CreateSwcSnapshotView.cpp  CreateSwcSnapshotView.h  CreateSwcSnapshotView.ui  EditorAdminUserManager.cpp  EditorAdminUserManager.h  EditorAdminUserManager.ui  EditorAnoAttachment.cpp  EditorAnoAttachment.h  EditorApoAttachment.cpp  EditorApoAttachment.h  EditorAttachmentView.cpp  EditorAttachmentView.h  EditorAttachmentView.ui  EditorBase.cpp  EditorBase.h  EditorBatchManageSwc.cpp  EditorBatchManageSwc.h  EditorBatchManageSwc.ui  EditorDailyStatisticsMetaInfo.cpp  EditorDailyStatisticsMetaInfo.h  EditorLMeasure.cpp  EditorLMeasure.h  EditorPermission.cpp  EditorPermission.h  EditorPermission.ui  EditorPermissionGroup.cpp  EditorPermissionGroup.h  EditorPermissionGroup.ui  EditorProjectMetaInfo.cpp  EditorProjectMetaInfo.h  EditorProjectMetaInfo.ui  EditorQualityControl.cpp  EditorQualityControl.h  EditorSwcAttachment.cpp  EditorSwcAttachment.h  EditorSwcAttachment.ui  EditorSwcFeature.cpp  (+119 more)
src/ui/Renderer/: SwcRenderer.cpp  SwcRenderer.h
src/ui/TreeWidget/: TreeWidget.cpp  TreeWidget.h
src/util/: util.hpp
